--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lucide-react": "^0.555.0",
     "react-markdown": "^10.1.0",
     "react-dom": "^19.2.1",
-    "@google/genai": "^1.31.0"
+    "@google/genai": "^1.31.0",
+    "remark-gfm": "^4.0.1",
+    "mermaid": "^11.12.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
